# ceres

./: .gitignore  .gitmodules  README.md
assembler/: asm.cpp  test_white.asm
docs/architecture/: cpu.md  graphics.md  interrupts.md  memory-map.md  overview.md
docs/isa/: arithmetic.md  control-flow.md  io.md  logic.md  memory.md  opcodes.md  overview.md
emulator/: CMakeLists.txt
emulator/include/: window.hpp
emulator/src/: cpu.cpp  cpu.h  display.cpp  display.h  main.cpp  memory.cpp  memory.h  window.cpp
emulator/tools/: gen_test_rom.cpp
